User data access objects are implemented as singleton beans, dependencies are added: guava, inject, jta-aop

--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,23 @@
             <version>1.10</version>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+        <dependency>
             <groupId>com.anli.generalization</groupId>
             <artifactId>user-data</artifactId>
+            <version>0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.anli</groupId>
+            <artifactId>jta-aop</artifactId>
             <version>0.1</version>
         </dependency>
     </dependencies>
